--- a/admin_addUserPage.html
+++ b/admin_addUserPage.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
-    <!-- <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
@@ -33,7 +31,6 @@
     <div class="wrapper">
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
-            <!-- <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60"> -->
         </div>
 
         <!-- Navbar -->
@@ -139,9 +136,7 @@
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
                                 <div class="col-sm-4">
-
-                                    <!-- <p class="form-control" id="userProfile" style="border: none; margin-left: -10px;">S123456789</p> -->
-                                    <select class="form-control">
+                                    <select class="form-control" id="userUserProfile">
 
                                         <option>Reviewer</option>
                                         <option>Author</option>
@@ -168,21 +163,21 @@
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="adminFullName">
+                                    <input type="text" class="form-control" id="userFullName">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="userPassword" placeholder="Password">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputSex" class="col-sm-2 col-form-label">Sex：</label>
                                 <div class="col-sm-4" style="display: inherit;">
-                                    <input type="radio" class="sex_input" id="female" name="sex" value="F">
+                                    <input type="radio" class="sex_input" id="userFemale" name="sex" value="F">
                                     <label for="female" class="sex_label">F</label>
-                                    <input type="radio" class="sex_input" id="male" name="sex" value="M">
+                                    <input type="radio" class="sex_input" id="userMale" name="sex" value="M">
                                     <label for="male" class="sex_label">M</label>
                                 </div>
                             </div>
@@ -197,20 +192,16 @@
                             <div class="form-group row">
                                 <label for="inputEmail" class="col-sm-2 col-form-label">Contact:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="inputContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="userContact" placeholder="Contact Number">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                    <input type="email" class="form-control" id="userEmail" placeholder="Email">
                                 </div>
                             </div>
-                            <!-- <div class="form-group row">
-                            <div class="offset-sm-2 col-sm-2">
-                                <button type="submit" id="add_user" class="btn" style="background-color: #109CF1; color: white;" data-toggle="modal" data-target="#addUserModal">Add user</button>
-                            </div>
-                        </div> -->
+                        
                             <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#addUserModal">
                                 Add user
                             </button>
@@ -236,19 +227,19 @@
                     <div class="modal-body">
                         <p>NRIC:&nbsp;</p>
                         <div class="detail">
-                            <!-- get UserID from DB-->
-                            <label class="userNRIC">Ab1234567</label>
+                            <!-- get UserNRIC from DB-->
+                            <label id="addNRIC">Ab1234567</label>
                         </div>
                         <p>User Profile:&nbsp;</p>
                         <div class="detail">
-                            <!-- get UserName from DB-->
-                            <label class="userProfile">User</label>
+                            <!-- get UserProfile from DB-->
+                            <label id="addUserProfile">User</label>
                         </div>
 
                         <p>Password:&nbsp;</p>
                         <div class="detail">
-                            <!-- get UserAge from DB-->.............
-                            <label class="UserName">.............</label>
+                            <!-- get UserAge from DB-->
+                            <label id="addPassword">.............</label>
                         </div>
                         <button type="button" style="float: right;" class="detail_action_btn">
                             Ok
@@ -283,12 +274,6 @@
                 $(this).addClass("active");
             });
         </script>
-        <!-- OPTIONAL SCRIPTS -->
-        <!-- <script src="plugins/chart.js/Chart.min.js "></script> -->
-        <!-- AdminLTE for demo purposes -->
-        <!-- <script src="dist/js/demo.js "></script> -->
-        <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-        <!-- <script src="dist/js/pages/dashboard3.js "></script> -->
 </body>
 
 </html>
