change id naming

--- a/admin_addUserPage.html
+++ b/admin_addUserPage.html
@@ -148,7 +148,7 @@
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">NRIC</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="userNRIC">
+                                    <input type="text" class="form-control" id="admin_AddNRIC">
 
                                 </div>
                             </div>
@@ -156,28 +156,28 @@
                                 <label for="inputUserName" class="col-sm-2 col-form-label">UserName:</label>
                                 <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="userName">
+                                    <input type="text" class="form-control" id="admin_AddName">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="userFullName">
+                                    <input type="text" class="form-control" id="admin_AddFullName">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="userPassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="admin_AddPassword" placeholder="Password">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputSex" class="col-sm-2 col-form-label">Sex：</label>
                                 <div class="col-sm-4" style="display: inherit;">
-                                    <input type="radio" class="sex_input" id="userFemale" name="sex" value="F">
+                                    <input type="radio" class="sex_input" id="admin_AddFemale" name="sex" value="F">
                                     <label for="female" class="sex_label">F</label>
-                                    <input type="radio" class="sex_input" id="userMale" name="sex" value="M">
+                                    <input type="radio" class="sex_input" id="admin_AddMale" name="sex" value="M">
                                     <label for="male" class="sex_label">M</label>
                                 </div>
                             </div>
@@ -185,20 +185,20 @@
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
 
-                                    <input type="number" class="form-control" id="userAge" placeholder="Age">
+                                    <input type="number" class="form-control" id="admin_AddAge" placeholder="Age">
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputEmail" class="col-sm-2 col-form-label">Contact:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="userContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_AddContact" placeholder="Contact Number">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="email" class="form-control" id="userEmail" placeholder="Email">
+                                    <input type="email" class="form-control" id="admin_AddEmail" placeholder="Email">
                                 </div>
                             </div>
                         
