change id naming

--- a/admin_addUserPage.html
+++ b/admin_addUserPage.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Doctor</title>
+    <title>Admin</title>
     <style>
         div {
             height: auto;
@@ -31,6 +31,7 @@
     <div class="wrapper">
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
+            <!-- <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60"> -->
         </div>
 
         <!-- Navbar -->
@@ -148,7 +149,7 @@
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">NRIC</label>
                                 <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="admin_AddNRIC">
+                                    <input type="text" class="form-control" id="admin_addNRIC">
 
                                 </div>
                             </div>
@@ -156,28 +157,28 @@
                                 <label for="inputUserName" class="col-sm-2 col-form-label">UserName:</label>
                                 <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="admin_AddName">
+                                    <input type="text" class="form-control" id="admin_addName">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
 
-                                    <input type="text" class="form-control" id="admin_AddFullName">
+                                    <input type="text" class="form-control" id="admin_addFullName">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="admin_AddPassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="admin_addPassword" placeholder="Password">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputSex" class="col-sm-2 col-form-label">Sex：</label>
                                 <div class="col-sm-4" style="display: inherit;">
-                                    <input type="radio" class="sex_input" id="admin_AddFemale" name="sex" value="F">
+                                    <input type="radio" class="sex_input" id="admin_addFemale" name="sex" value="F">
                                     <label for="female" class="sex_label">F</label>
-                                    <input type="radio" class="sex_input" id="admin_AddMale" name="sex" value="M">
+                                    <input type="radio" class="sex_input" id="admin_addMale" name="sex" value="M">
                                     <label for="male" class="sex_label">M</label>
                                 </div>
                             </div>
@@ -185,20 +186,20 @@
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
 
-                                    <input type="number" class="form-control" id="admin_AddAge" placeholder="Age">
+                                    <input type="number" class="form-control" id="admin_addAge" placeholder="Age">
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputEmail" class="col-sm-2 col-form-label">Contact:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_AddContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_addContact" placeholder="Contact Number">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="email" class="form-control" id="admin_AddEmail" placeholder="Email">
+                                    <input type="email" class="form-control" id="admin_addEmail" placeholder="Email">
                                 </div>
                             </div>
                         
