--- a/admin_profilePage.html
+++ b/admin_profilePage.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
-    <!-- <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
@@ -79,7 +77,7 @@
                 <hr color="#EBEFF2" style="border:1; margin-top:35px; opacity: 0.8;">
 
                 <nav class=" mt-2 ">
-                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
+                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu" data-accordion="false ">
                         <li class="nav-item">
                             <a href="admin_addUserPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/add.svg"></i>
@@ -138,44 +136,44 @@
                             <div class="form-group row">
                                 <label for="NRIC" class="col-sm-2 col-form-label">NRIC:</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="NRIC" style="border: none; margin-left: -10px;">S123456789</p>
+                                    <p class="form-control" id="admin_profileNRIC" style="border: none; margin-left: -10px;">S123456789</p>
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                                    <input type="password" class="form-control" id="admin_profilePassword" placeholder="Password">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="adminName" class="col-sm-2 col-form-label">Admin Name:</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="adminName" style="border: none; margin-left: -10px;">Admin A </p>
+                                    <p class="form-control" id="admin_profileName" style="border: none; margin-left: -10px;">Admin A </p>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="inputSex" class="col-sm-2 col-form-label">Sex：</label>
+                                <label for="inputSex" class="col-sm-2 col-form-label">Gender：</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="userSex" style="border: none; margin-left: -10px;">F</p>
+                                    <p class="form-control" id="admin_profileGender" style="border: none; margin-left: -10px;">F</p>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="userAge" style="border: none; margin-left: -10px;">38</p>
+                                    <p class="form-control" id="admin_profileAge" style="border: none; margin-left: -10px;">38</p>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="inputContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_profileContact" placeholder="Contact Number">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control " id="inputEmail" placeholder="Email">
+                                    <input type="tel" class="form-control " id="admin_profileEmail" placeholder="Email">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -213,12 +211,7 @@
             $(this).addClass("active");
         });
     </script>
-    <!-- OPTIONAL SCRIPTS -->
-    <!-- <script src="plugins/chart.js/Chart.min.js "></script> -->
-    <!-- AdminLTE for demo purposes -->
-    <!-- <script src="dist/js/demo.js "></script> -->
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <!-- <script src="dist/js/pages/dashboard3.js "></script> -->
+  
 </body>
 
 </html>
