change id naming

--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -253,7 +253,7 @@
                         <!-- get UserEmail from DB-->
                         <label class="admin_searchUserEmail">user123@gmai.com</label>
                     </div>
-                    <button type="button" style="float: left;margin-right: 20px;" class="blue_btn" data-toggle="modal" data-target="#editModal">
+                    <button type="button" class="blue_btn" data-toggle="modal" data-target="#editModal" id="editDetail_btn">
                         Edit Detail
                     </button>
 <!--                    <button type="button" class="red_btn" data-toggle="modal" data-target="#deleteModal">
