--- a/admin_profilePage.html
+++ b/admin_profilePage.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Doctor</title>
+    <title>Admin</title>
     <style>
         div {
             height: auto;
