--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -136,9 +136,9 @@
 
                     <div class="card-body">
                         <div>
-                            <p class="searchLeft">Enter User NRIC: </p>
+                            <p class="searchLeft">Enter User Name: </p>
                             <!-- search User ID -->
-                            <input type="search" id="searchNameNric" class="form-control form-control-lg" placeholder="Search User NRIC/ Name">
+                            <input type="search" id="searchName" class="form-control form-control-lg" placeholder="Search User NRIC/ Name">
                             <select id="searchNameID" class="form-control" style="width: 200px;display: inline-block">
 
                                 <option>All</option>
@@ -171,7 +171,7 @@
                     <table id="searchUser" class="table table-hover table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="width:100%">
                         <thead>
                             <tr>
-                                <th>NRIC</th>
+                                <!--<th>NRIC</th>-->
                                 <th>Full Name</th>
                                 <th>User Profile</th>
 
@@ -181,7 +181,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>S12345678</td>
+                  <!--              <td>S12345678</td>-->
                                 <td>Mike Doe</td>
                                 <td>Author</td>
 
@@ -218,11 +218,11 @@
                         <!-- get userName from DB-->
                         <label class="admin_searchUserProfile">Author</label>
                     </div>
-                    <p>NRIC:&nbsp;</p>
-                    <div class="detail">
+                    <!--<p>NRIC:&nbsp;</p>
+                    <div class="detail">-->
                         <!-- get userID from DB-->
-                        <label class="admin_searchUserNRIC">Ab1234567</label>
-                    </div>
+                        <!--<label class="admin_searchUserNRIC">Ab1234567</label>
+                    </div>-->
                     <p>Username:&nbsp;</p>
                     <div class="detail">
                         <!-- get userName from DB-->
@@ -277,10 +277,10 @@
                         </button> -->
                 </div>
                 <div class="modal-body">
-                    <p>NRIC:&nbsp;</p>
-                    <div class="detail">
+                    <!--<p>NRIC:&nbsp;</p>
+                    <div class="detail">-->
                         <!-- get userID from DB-->
-                        <label class="deleteUserNRIC">Ab1234567</label>
+                        <!--<label class="deleteUserNRIC">Ab1234567</label>-->
                     </div>
                     <p>User Profile:&nbsp;</p>
                     <div class="detail">
@@ -341,13 +341,13 @@
                         <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
                         <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Account</p>
                     </div>
-                    <div class="edit-group">
+                    <!--<div class="edit-group">
                         <p>NRIC:&nbsp;</p>
-                        <div class="detail">
+                        <div class="detail">-->
                             <!-- get userNRIC from DB-->
-                            <label id="admin_editNRIC">Ab1234567</label>
+                            <!--<label id="admin_editNRIC">Ab1234567</label>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="edit-group">
                         <p>Username:&nbsp;</p>
                         <div class="detail">
