--- a/login_page.html
+++ b/login_page.html
@@ -51,7 +51,7 @@
                     <form>
                         <div class="input-container">
                             <img class="icon" src="img/userName_icon.svg" />
-                            <input class="input-field" type="text" placeholder="Username" name="userName">
+                            <input class="input-field" type="text" placeholder="Email" name="userEmail">
                         </div>
                         <br />
                         <div class="input-container">
@@ -69,7 +69,7 @@
                     <form>
                         <div class="input-container">
                             <img class="icon" src="img/userName_icon.svg" />
-                            <input class="input-field" type="text" placeholder="Username" name="userName">
+                            <input class="input-field" type="text" placeholder="Email" name="userEmail">
                         </div>
                         <br />
                         <div class="input-container">
