--- a/admin_addUserPage.html
+++ b/admin_addUserPage.html
@@ -90,6 +90,16 @@
                             </a>
                         </li>
                         <li class="nav-item active">
+                            <a href="admin_addUserProfile.html" class="nav-link">
+                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <p class="navHeader">
+                                   Pending user profile
+
+                                </p>
+                            </a>
+
+                        </li>
+                        <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/search.svg"></i>
                                 <p class="navHeader">
@@ -134,7 +144,7 @@
                     </div>
                     <div id="settings" style="padding: 30px;">
                         <form class="form-horizontal">
-                            <div class="form-group row">
+<!--                            <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
                                 <div class="col-sm-4">
                                     <select class="form-control" id="userUserProfile">
@@ -145,21 +155,21 @@
                                         <option>Conference Chair</option>
                                     </select>
                                 </div>
-                            </div>
-                            <div class="form-group row">
+                            </div>-->
+<!--                            <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">NRIC</label>
                                 <div class="col-sm-4">
                                     <input type="text" class="form-control" id="admin_addNRIC">
 
                                 </div>
-                            </div>
-                            <div class="form-group row">
+                            </div>-->
+<!--                            <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">User Name:</label>
                                 <div class="col-sm-4">
 
                                     <input type="text" class="form-control" id="admin_addName">
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="form-group row">
                                 <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
@@ -186,14 +196,14 @@
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
 
-                                    <input type="number" class="form-control" id="admin_addAge" placeholder="Age">
+                                    <input type="number" class="form-control" id="admin_addAge" placeholder="Age" maxlength="2">
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputEmail" class="col-sm-2 col-form-label">Contact:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_addContact" placeholder="Contact Number">
+                                    <input type="tel" class="form-control" id="admin_addContact" placeholder="Contact Number" min="8" maxlength="8">
                                 </div>
                             </div>
                             <div class="form-group row">
