--- a/admin_addUserProfile.html
+++ b/admin_addUserProfile.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <title>AdminLTE 3 | Dashboard</title> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontawesome-free@1.0.1/css/all.min.css">
@@ -10,11 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Admin</title>
     <style>
@@ -77,7 +80,7 @@
                 <hr color="#EBEFF2" style="border:1; margin-top:35px; opacity: 0.8;">
 
                 <nav class=" mt-2 ">
-                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu" data-accordion="false ">
+                    <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
                         <li class="nav-item">
                             <a href="admin_addUserPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/add.svg"></i>
@@ -85,6 +88,16 @@
                                     Add user
                                 </p>
                             </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="admin_addUserProfile.html" class="nav-link">
+                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <p class="navHeader">
+                                    Pending user profile
+
+                                </p>
+                            </a>
+
                         </li>
                         <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
@@ -122,74 +135,87 @@
             </div>
             <!-- /.sidebar -->
         </aside>
-
         <!-- Content Wrapper. Doctor Home Page -->
         <div class="content-wrapper ">
             <div class="col-12">
                 <div class="card" style="margin-top: 20px;">
-                    <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
-                        <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
-                        <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Personal Profile</p>
+                    <div class="card-header" style="padding-top: 0; padding-bottom: 0; background-color: white;">
+                        <p style="font-size:20px; color: black; margin-left: 10px; margin-top: 25px;">Personal Profile</p>
                     </div>
                     <div id="settings" style="padding: 30px;">
                         <form class="form-horizontal">
-                            <!--<div class="form-group row">
-                                <label for="NRIC" class="col-sm-2 col-form-label">NRIC:</label>
+                            <div class="form-group row">
+                                <label for="inputUserName" class="col-sm-2 col-form-label">User Profile:</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileNRIC" style="border: none; margin-left: -10px;">S123456789</p>
-                                </div>
-                            </div>-->
+                                    <select class="form-control" id="userUserProfile">
 
+                                        <option>Reviewer</option>
+                                        <option>Author</option>
+                                        <option>User Admin</option>
+                                        <option>Conference Chair</option>
+                                    </select>
+                                </div>
+                            </div>
+                           
                             <div class="form-group row">
-                                <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
+                                <label for="inputUserName" class="col-sm-2 col-form-label">Full Name:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="admin_profilePassword" placeholder="Password">
+
+                                    <input type="text" class="form-control" id="admin_addFullName">
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label for="adminName" class="col-sm-2 col-form-label">Admin Name:</label>
-                                <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileName" style="border: none; margin-left: -10px;">Admin A </p>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputSex" class="col-sm-2 col-form-label">Gender：</label>
-                                <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileGender" style="border: none; margin-left: -10px;">F</p>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
-                                <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileAge" style="border: none; margin-left: -10px;">38</p>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
-                                <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_profileContact" placeholder="Contact Number">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
-                                <div class="col-sm-4">
-                                    <input type="tel" class="form-control " id="admin_profileEmail" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-sm-2 col-sm-4">
-                                    <button type="submit" id="update_change" class="btn detail_action_btn">Update Change</button>
-                                </div>
-                            </div>
+                            
+
+                            <button type="button" class="detail_action_btn" data-toggle="modal" data-target="#addUserModal">
+                                Add user profile
+                            </button>
+
                         </form>
                     </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
+                    <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">User has been added successfully</p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>NRIC:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserNRIC from DB-->
+                        <label id="addNRIC">Ab1234567</label>
+                    </div>
+                    <p>User Profile:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserProfile from DB-->
+                        <label id="addUserProfile">User</label>
+                    </div>
+
+                    <p>Password:&nbsp;</p>
+                    <div class="detail">
+                        <!-- get UserAge from DB-->
+                        <label id="addPassword">.............</label>
+                    </div>
+                    <button type="button" style="float: right;" class="detail_action_btn">
+                        Ok
+                    </button>
+                </div>
+                <div class="modal-footer" style="border: none;">
                 </div>
             </div>
         </div>
     </div>
 
     <!-- ./wrapper -->
-
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js "></script>
     <!-- Bootstrap -->
@@ -198,7 +224,6 @@
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- getdatepicker -->
-
     <!-- datatable -->
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
@@ -206,12 +231,11 @@
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
 
     <script>
-        $(".nav .nav-link").on("click", function() {
-            $(".nav").find(".active").removeClass("active");
-            $(this).addClass("active");
-        });
+            $(".nav .nav-link").on("click", function() {
+                $(".nav").find(".active").removeClass("active");
+                $(this).addClass("active");
+            });
     </script>
-  
 </body>
 
 </html>
