--- a/admin_profilePage.html
+++ b/admin_profilePage.html
@@ -86,6 +86,16 @@
                             </a>
                         </li>
                         <li class="nav-item active">
+                            <a href="admin_addUserProfile.html" class="nav-link">
+                                <i class="nav-icon"><img src="img/search.svg"></i>
+                                <p class="navHeader">
+                                    Pending user profile
+
+                                </p>
+                            </a>
+
+                        </li>
+                        <li class="nav-item active">
                             <a href="admin_searchUserPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="img/search.svg"></i>
                                 <p class="navHeader">
