--- a/admin_addUserProfile.html
+++ b/admin_addUserProfile.html
@@ -192,19 +192,13 @@
                 <div class="modal-body">
                     <p>NRIC:&nbsp;</p>
                     <div class="detail">
-                        <!-- get UserNRIC from DB-->
-                        <label id="addNRIC">Ab1234567</label>
+                        <!-- get UserName from DB-->
+                        <label id="addUserName">Mike Doe</label>
                     </div>
                     <p>User Profile:&nbsp;</p>
                     <div class="detail">
                         <!-- get UserProfile from DB-->
-                        <label id="addUserProfile">User</label>
-                    </div>
-
-                    <p>Password:&nbsp;</p>
-                    <div class="detail">
-                        <!-- get UserAge from DB-->
-                        <label id="addPassword">.............</label>
+                        <label id="addUserProfile">Author</label>
                     </div>
                     <button type="button" style="float: right;" class="detail_action_btn">
                         Ok
