--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -355,18 +355,24 @@
                     <!--<div class="edit-group">
                         <p>NRIC:&nbsp;</p>
                         <div class="detail">-->
-                    <!-- get userNRIC from DB-->
-                    <!--<label id="admin_editNRIC">Ab1234567</label>
+                                    <!-- get userNRIC from DB-->
+                                    <!--<label id="admin_editNRIC">Ab1234567</label>
                         </div>
                     </div>-->
-                    <!--<div class="edit-group">
+                                    <!--<div class="edit-group">
                         <p>Username:&nbsp;</p>
                         <div class="detail">-->
-                            <!-- get userName from DB-->
-                            <!--<input type="text" class="form-control" id="admin_editUsername">
+                                    <!-- get userName from DB-->
+                                    <!--<input type="text" class="form-control" id="admin_editUsername">
                         </div>
                     </div>-->
-
+                    <div class="edit-group">
+                        <p>Email:&nbsp;</p>
+                        <div class="detail">
+                            <!-- get userName from DB-->
+                            <input type="email" class="form-control" id="contact">
+                        </div>
+                    </div>
                     <div class="edit-group">
                         <p>Password:&nbsp;</p>
                         <div class="detail">
@@ -379,10 +385,10 @@
                         <div class="detail">
                             <!-- get userName from DB-->
                             <select class="form-control" style="width: 200px;display: inline-block" id="admin_editUserProfile" ">
-                                <option>Reviewer</option>
-                                <option>Author</option>
-                                <option>User Admin</option>
-                                <option>Conference Chair</option>
+                                <option value="Reviewer">Reviewer</option>
+                                <option value="Author">Author</option>
+                                <option value="User Admin">User Admin</option>
+                                <option value="Conference Chair">Conference Chair</option>
 
                             </select>
                         </div>
@@ -402,9 +408,9 @@
                         <p>Sex:&nbsp;</p>
                         <div class="detail">
                             <!--       <input type="radio" class="sex_input" id="admin_editFemale" name="sex" value="F">
-                            <label for="female" class="sex_label">F</label>
-                            <input type="radio" class="sex_input" id="male" name="sex" value="M">
-                            <label for="male" class="sex_label">M</label><br>-->
+            <label for="female" class="sex_label">F</label>
+            <input type="radio" class="sex_input" id="male" name="sex" value="M">
+            <label for="male" class="sex_label">M</label><br>-->
                             <label class="admin_editGender">F</label>
 
                         </div>
@@ -417,10 +423,10 @@
                         </div>
                     </div>
 
-                    <div style="clear: both;">
-                        <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
-                        <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Info</p>
-                    </div>
+                    <!--                    <div style="clear: both;">
+                            <div style="float:left;width: 3px;height: 28px; background: #F7685B;position: absolute;"></div>
+                            <p style="font-size:16px; color: black; margin-left: 10px; display: inline;">Info</p>
+                        </div>-->
                     <div class="edit-group">
                         <p>Contact:&nbsp;</p>
                         <div class="detail">
@@ -428,13 +434,7 @@
                             <input type="text" class="form-control" id="admin_editContact">
                         </div>
                     </div>
-                    <div class="edit-group">
-                        <p>Email:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get userName from DB-->
-                            <input type="email" class="form-control" id="contact">
-                        </div>
-                    </div>
+
                     <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
                         Back
                     </button>
