--- a/admin_searchUserPage.html
+++ b/admin_searchUserPage.html
@@ -384,7 +384,7 @@
                         <p>User Profile:&nbsp;</p>
                         <div class="detail">
                             <!-- get userName from DB-->
-                            <select class="form-control" style="width: 200px;display: inline-block" id="admin_editUserProfile" ">
+                            <select class="form-control" style="display: inline-block" id="admin_editUserProfile" ">
                                 <option value="Reviewer">Reviewer</option>
                                 <option value="Author">Author</option>
                                 <option value="User Admin">User Admin</option>
