--- a/admin_addUserProfile.html
+++ b/admin_addUserProfile.html
@@ -190,7 +190,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>NRIC:&nbsp;</p>
+                    <p>Full Name:&nbsp;</p>
                     <div class="detail">
                         <!-- get UserName from DB-->
                         <label id="addUserName">Mike Doe</label>
